# pharaohdb

./: Cargo.toml  README.md
src/: custom_types.rs  dbtypes.rs  error.rs  lib.rs  metadata.rs  state.rs  table_builder.rs
src/db_logic/: db.rs  mod.rs
sucess/TABLES/users/: schema.tbl
tests/: test.rs
