[package]
name = "pharaohdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
redb = "2.0"              
aes-gcm = "0.10"     
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
serde_json = "1.0.148"
wincode = { version = "0.2.5", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
argon2 = "0.5.3"
chrono = "0.4.43"


[dev-dependencies]
criterion = "0.5"    
pretty_assertions = {version = "1.4.1"}     
tempfile = "3.10"
